Colocando los iconos en el bottom nav

--- a/landing/index.html
+++ b/landing/index.html
@@ -29,7 +29,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link text-white link-body-emphasis">
+                            <a href="/maps/mapa.html" class="nav-link text-white link-body-emphasis">
                                 <i class="fa-solid fa-map me-2" aria-hidden="true"></i>
                                 Mapa
                             </a>
