--- a/maps/mapa.html
+++ b/maps/mapa.html
@@ -20,6 +20,8 @@
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
         crossorigin=""/>
         <link rel="stylesheet" href="/landing/index.css">
+        <script src="https://kit.fontawesome.com/b9609ad0eb.js" crossorigin="anonymous"></script>
+
     </head>
 
     <body class="vh-100">
@@ -33,7 +35,7 @@
                     <div class="d-md-flex flex-column p-0 overflow-y-auto">
                         <ul class="nav nav-pills flex-column mb-auto fs-5 gap-2">
                             <li class="nav-item">
-                                <a href="#" class="nav-link text-white" aria-current="page">
+                                <a href="/landing/index.html" class="nav-link text-white" aria-current="page">
                                     <i class="fa-solid fa-house me-2" aria-hidden="true"></i>
                                     Inicio
                                 </a>
